<resources>
    <string name="app_name">CubicCoding</string>
    <string name="how_can_we_help_you">Cómo puedo ayudarte?</string>
    <string name="login">Login</string>
    <string name="voucher">Voucher</string>
    <string name="info">Información</string>
    <string name="address">Playa las cruces #520, Infonavit Playas\nMazatlán, Sin.</string>
    <string name="username">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="register">Registrar</string>
    <string name="insert_voucher">Ingresa Voucher</string>
    <string name="insert_email">Ingresa Email</string>
    <string name="start_session">Iniciar Sesión</string>
    <string name="register_voucher">Registrar Voucher</string>
    <string name="cc_website">www.cubiccoding.mx</string>
    <string name="information">Información</string>
    <string name="email">Email</string>
    <string name="send">Enviar</string>
    <string name="chrome_not_found">No se encontró chrome...</string>
    <string name="leave_us_your_email_for_more_info">Dejanos tu correo para enviarte más información</string>
    <string name="sending">Enviando...</string>
    <string name="sending_email">Enviando email...</string>
    <string name="validating">Validando...</string>
    <string name="voucher_doesnt_exist">El Voucher no existe</string>
    <string name="voucher_already_used">Este Voucher ya se usó</string>
    <string name="invalid_voucher">Voucher Inválido</string>
    <string name="error_processing_voucher">Error al procesar voucher</string>
    <string name="error_sending_email">Error al enviar email...</string>
    <string name="sign_me_up">Registrarme</string>
    <string name="welcome">Bienvenido!</string>
    <string name="confirm">Confirmar</string>
    <string name="insert_your_info">Introduce tus datos</string>
    <string name="complete_registration">Voucher validado!\nCompleta tu registro</string>
    <string name="invalid_email">Email invalido...</string>
    <string name="email_sent">Email enviado</string>
    <string name="validated">Validado!</string>
    <string name="valid_voucher">Voucher valido!</string>
    <string name="new_user">Usuario Nuevo</string>
    <string name="error_in_passwords">Error en contraseñas</string>
    <string name="error_during_register">Error al registrar</string>
    <string name="different_passwords">Contraseñas diferentes</string>
    <string name="insert_confirm">Ingrese confirmar</string>
    <string name="insert_password">Ingrese contraseña</string>
    <string name="insert_username">Ingrese usuario</string>
    <string name="logging_in">Iniciando sessión</string>
    <string name="registering">Registrando...</string>
    <string name="username_too_short">Usuario muy corto</string>
    <string name="password_too_short">Contraseña muy corta</string>
    <string name="you_logged_in">Iniciaste Sesión</string>
    <string name="user_already_exists">El usuario ya existe</string>
    <string name="user_or_password_incorrect">Usuario ó contraseña incorrectos</string>
    <string name="credentials">Credencial</string>
    <string name="scoreboard">Scoreboard</string>
    <string name="news">Avisos</string>
    <string name="profile">Perfil</string>
    <string name="error_login_in_try_again">Error al iniciar sesión, inténtalo nuevamente</string>
    <string name="no_scores">¡No hay scores!</string>
    <string name="error_loading_scores">El Scoreboard no está disponible</string>
    <string name="download">Descargar</string>
    <string name="insert_test_id">Ingresa Test ID</string>
    <string name="download_quick_test">Descargar Test Rápido</string>
    <string name="downloading">Descargando</string>
    <string name="downloading_question">Descargando pregunta</string>
    <string name="error_downloading_question">Error al descargar la pregunta</string>
    <string name="question_not_found">No se encontro la pregunta</string>
    <string name="answer">Responder</string>
    <string name="select_an_option">Selecciona alguna opción</string>
    <string name="you_have_selected_values">Seleccionaste: %s. Dá click en confirmar para enviar tu respuesta.</string>
    <string name="missing_info_try_again_later">Falta info, Intentalo de nuevo más tarde.</string>
    <string name="received_score_value">Score Obtenido: %s</string>
    <string name="max_score_value">Max Score: %s</string>
    <string name="test_id_value">ID: %s</string>
    <string name="question_already_answered">Ya contestaste esta pregunta</string>
    <string name="help">Ayuda</string>
    <string name="not_auth_to_answer">Sin autorización para contestar</string>
    <string name="this_question_has_expired">Esta pregunta ya expiró</string>
    <string name="error_while_answering">Error al contestar</string>
    <string name="successfully_loaded_score">Tu score fue cargado con éxito</string>
    <string name="rank">Rank</string>
    <string name="score">Score</string>
    <string name="questions">Preguntas</string>
    <string name="challenges">Retos</string>
    <string name="progress">Progreso</string>
    <string name="no_progress_data">No hay datos de progreso.</string>
    <string name="topics">Temas:</string>
    <string name="levels_format">%s / %s LEVEL UP</string>
    <string name="bonus">Bonus</string>
    <string name="no_elements_to_display">No hay elementos para mostrar...</string>
</resources>
