<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/pullHandle"
        android:layout_width="@dimen/pull_handle_size"
        android:layout_height="@dimen/pull_handle_size"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_drag_handle" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/bottomSplashHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/prompt"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="@dimen/bottom_splash_header_size"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pullHandle" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tellMeAboutCC"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/common_edge_space"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/leave_us_your_email_for_more_info"
        android:textColor="@color/smooth_black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bottomSplashHeader" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ccTellMeMoreInputLayout"
        style="@style/TextInputLayoutStyle"
        android:hint="@string/insert_email"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tellMeAboutCC"
        app:layout_constraintVertical_chainStyle="packed">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ccTellMeMoreEmail"
            style="@style/TextInputEditTextStyle"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tellMeMoreSendButton"
        style="@style/ActionButton"
        android:layout_marginTop="@dimen/bottom_actions_btn_vertical_space"
        android:text="@string/send"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ccTellMeMoreInputLayout" />

    <View
        android:id="@+id/infoSendBottomPadding"
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_edge_space"
        app:layout_constraintTop_toBottomOf="@id/tellMeMoreSendButton" />

</androidx.constraintlayout.widget.ConstraintLayout>
