<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:id="@+id/splashRoot">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/verifyVoucherLogo"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_verified" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/bottomSplashHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_edge_space"
            android:fontFamily="@font/prompt"
            android:text="Bienvenido CubicCoder"
            android:singleLine="true"
            android:ellipsize="end"
            android:textSize="25sp"
            android:textStyle="bold"
            android:gravity="center"
            android:includeFontPadding="false"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/verifyVoucherLogo" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/bottomSplashSubHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/prompt"
            android:text="Completa tu registro"
            android:textSize="17sp"
            android:textStyle="bold"
            android:gravity="center"
            android:includeFontPadding="false"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bottomSplashHeader" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/usernameInputLayout"
            style="@style/TextInputLayoutStyle"
            android:hint="@string/new_user"
            app:layout_constraintBottom_toTopOf="@+id/passwordInputLayout"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bottomSplashSubHeader"
            app:layout_constraintVertical_chainStyle="packed">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ccUsername"
                style="@style/TextInputEditTextStyle"
                android:drawableEnd="@drawable/ic_user"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordInputLayout"
            style="@style/TextInputLayoutStyle"
            android:hint="@string/password"
            app:layout_constraintBottom_toTopOf="@+id/retypePasswordInputLayout"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/usernameInputLayout"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorAccent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ccPassword"
                style="@style/TextInputEditTextStyle"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/retypePasswordInputLayout"
            style="@style/TextInputLayoutStyle"
            android:hint="@string/confirm"
            app:layout_constraintBottom_toTopOf="@+id/signMeUpButton"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/passwordInputLayout"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorAccent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ccRetryPassword"
                style="@style/TextInputEditTextStyle"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/signMeUpButton"
            style="@style/ActionButton"
            android:layout_marginTop="@dimen/bottom_actions_login_margin_top"
            android:text="@string/sign_me_up"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/retypePasswordInputLayout" />


        <View
            android:layout_width="match_parent"
            android:layout_height="30dp"
            app:layout_constraintTop_toBottomOf="@id/signMeUpButton"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>